tests/errors/runtime.NumberOutOfPermittedRange.art
print 2342342342423423534543534 ^ 10
; something
print 234234 ^ 123123123123123123123 ; something else
; something else